--- a/Actors/RpcServer/RpcServer.csproj
+++ b/Actors/RpcServer/RpcServer.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>RpcServer</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
