--- a/ADLNode/ADLNode.csproj
+++ b/ADLNode/ADLNode.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.10" />
+    <PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />
     <PackageReference Include="Akka.DI.Ninject" Version="1.3.1" />
     <PackageReference Include="Akka.Remote" Version="1.3.10" />
     <PackageReference Include="Autofac" Version="4.8.1" />
