created main actor system

--- a/ADLNode/ADLNode.csproj
+++ b/ADLNode/ADLNode.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ActorsManager\ActorsManager.csproj" />
     <ProjectReference Include="..\Actors\Consensus\Consensus.csproj" />
     <ProjectReference Include="..\Actors\DFS\DFS.csproj" />
     <ProjectReference Include="..\Actors\Ledger\Ledger.csproj" />
