--- a/Actors/DFS/DFS.csproj
+++ b/Actors/DFS/DFS.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.10" />
     <PackageReference Include="Akka.Remote" Version="1.3.10" />
+    <PackageReference Include="Ipfs.Api" Version="0.23.2" />
   </ItemGroup>
 
 </Project>
