refactor && continue start routine

--- a/Actors/Consensus/Consensus.csproj
+++ b/Actors/Consensus/Consensus.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Consensus</RootNamespace>
+    <RootNamespace>ADL.Consensus</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
