--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <RootNamespace>ADL.Node</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +11,7 @@
     <PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />
     <PackageReference Include="Akka.Remote" Version="1.3.10" />
     <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="Microsoft.Extensions.CommandLineUtils" Version="1.1.1" />
+    <PackageReference Include="Thinktecture.Configuration" Version="2.1.0" />
   </ItemGroup>
 
   <ItemGroup>
