--- a/Cli/Configs/config.testnet.json
+++ b/Cli/Configs/config.testnet.json
@@ -5,13 +5,24 @@
       "Index": "Index_{0}"
     },
     "P2P": {
-      "Port": 42069
+      "Port": 42069,
     },
     "RPC": {
       "BindAddress": "127.0.0.1",
       "Port": 42042,
       "SslCert": "",
       "SslCertPassword": ""
+    },
+    "Protocol":  {
+      "AddressVersion": 23,
+      "Magic": 4206942,
+      "SeedList": [
+        "seed1.network.atlas.io:42069",
+        "seed2.network.atlas.io:42069",
+        "seed3.network.atlas.io:42069",
+        "seed4.network.atlas.io:42069",
+        "seed5.network.atlas.io:42069"
+      ]
     }
   }
 }
