--- a/Actors/LocalPeer/LocalPeer.csproj
+++ b/Actors/LocalPeer/LocalPeer.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\SharedLibraries\Transaction\Transaction.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Akka" Version="1.3.10" />
+    <PackageReference Include="Akka.Remote" Version="1.3.10" />
+  </ItemGroup>
+
 </Project>
