--- a/Actors/IO/IOService.csproj
+++ b/Actors/IO/IOService.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>ADL.TaskManager</RootNamespace>
+    <RootNamespace>ADL.IOService</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
