--- a/Components/Rpc/Server/RpcServer.csproj
+++ b/Components/Rpc/Server/RpcServer.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Proto\RpcProto.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <PackageReference Include="Google.Protobuf" Version="3.6.1" />
     <PackageReference Include="Grpc" Version="1.16.0" />
     <PackageReference Include="Grpc.Core" Version="1.16.0" />
   </ItemGroup>
