--- a/Components/Token/Token.csproj
+++ b/Components/Token/Token.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <RootNamespace>ADL.Token</RootNamespace>
     </PropertyGroup>
 
 </Project>
