--- a/Components/Gossip/Gossip.csproj
+++ b/Components/Gossip/Gossip.csproj
@@ -9,5 +9,8 @@
     <PackageReference Include="Akka" Version="1.3.10" />
     <PackageReference Include="Akka.Remote" Version="1.3.10" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Transaction\Transaction.csproj" />
+  </ItemGroup>
 
 </Project>
