--- a/Node/Node.csproj
+++ b/Node/Node.csproj
@@ -1,39 +1,56 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <!--<RootNamespace>ADL.Node</RootNamespace>-->
+    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <RootNamespace>ADL.Node</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <!--<PackageReference Include="Akka" Version="1.3.10" />-->
-    <!--<PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />-->
-    <!--<PackageReference Include="Akka.Remote" Version="1.3.10" />-->
-    <!--<PackageReference Include="Autofac" Version="4.8.1" />-->
-    <!--<PackageReference Include="Autofac.Configuration" Version="4.1.0" />-->
-    <!--<PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />-->
-    <!--<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />-->
-    <!--<PackageReference Include="Thinktecture.Configuration" Version="2.1.0" />-->
-    <!--<PackageReference Include="Thinktecture.Extensions.Configuration.Autofac" Version="2.1.0" />-->
-    <!--<PackageReference Include="Thinktecture.IO.FileSystem.Abstractions" Version="2.4.0" />-->
+    <PackageReference Include="Akka" Version="1.3.10" />
+    <PackageReference Include="Akka.DI.AutoFac" Version="1.3.9" />
+    <PackageReference Include="Akka.Remote" Version="1.3.10" />
+    <PackageReference Include="Autofac" Version="4.8.1" />
+    <PackageReference Include="Autofac.Configuration" Version="4.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+    <PackageReference Include="Thinktecture.Configuration" Version="2.1.0" />
+    <PackageReference Include="Thinktecture.Extensions.Configuration.Autofac" Version="2.1.0" />
+    <PackageReference Include="Thinktecture.IO.FileSystem.Abstractions" Version="2.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <!--<ProjectReference Include="..\Components\Ledger\Ledger.csproj" />-->
-    <!--<ProjectReference Include="..\Components\Consensus\Consensus.csproj" />-->
-    <!--<ProjectReference Include="..\Components\Mempool\Mempool.csproj" />-->
-    <!--<ProjectReference Include="..\Components\IO\IO.csproj" />-->
-    <!--<ProjectReference Include="..\Components\DFS\DFS.csproj" />-->
-    <!--<ProjectReference Include="..\Components\P2P\P2P.csproj" />-->
+    <ProjectReference Include="..\Components\Rpc\Proto\RpcProto.csproj" />
     <ProjectReference Include="..\Components\Rpc\Server\RpcServer.csproj" />
+    <ProjectReference Include="..\Components\Consensus\Consensus.csproj" />
+    <ProjectReference Include="..\Components\Contract\Contract.csproj" />
+    <ProjectReference Include="..\Components\Cryptography\Cryptography.csproj" />
+    <ProjectReference Include="..\Components\DFS\DFS.csproj" />
+    <ProjectReference Include="..\Components\Economics\Economics.csproj" />
+    <ProjectReference Include="..\Components\Gossip\Gossip.csproj" />
+    <ProjectReference Include="..\Components\Ledger\Ledger.csproj" />
+    <ProjectReference Include="..\Components\Mempool\Mempool.csproj" />
+    <ProjectReference Include="..\Components\P2P\P2P.csproj" />
+    <ProjectReference Include="..\Components\Token\Token.csproj" />
+    <ProjectReference Include="..\Components\Transaction\Transaction.csproj" />
   </ItemGroup>
 
-  <!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">-->
-    <!--<ItemGroup>-->
-      <!--<PluginAssembly Include="$(SolutionDir)\Components\Cryptography\bin\$(ConfigurationName)\**\Cryptography.dll" />-->
-      <!--<PluginAssembly Include="$(SolutionDir)\Components\Rpc\Server\bin\$(ConfigurationName)\**\RpcServer.dll" />-->
-    <!--</ItemGroup>-->
-    <!--<Copy SourceFiles="@(PluginAssembly)" DestinationFolder="$(OutDir)" />-->
-  <!--</Target>-->
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <ItemGroup>
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\RpcProto.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\RpcServer.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Consensus.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Contract.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Cryptography.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\DFS.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Economics.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Gossip.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Ledger.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Mempool.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\P2P.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Token.dll" />
+      <PluginAssembly Include="$(SolutionDir)\Node\bin\$(ConfigurationName)\**\Transaction.dll" />
+    </ItemGroup>
+    <Copy SourceFiles="@(PluginAssembly)" DestinationFolder="$(OutDir)" />
+  </Target>
   
 </Project>
