--- a/Components/Economics/Economics.csproj
+++ b/Components/Economics/Economics.csproj
@@ -4,5 +4,33 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>ADL.Economics</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <_UnmanagedRegistrationCache Remove="obj\Economics.csproj.UnmanagedRegistration.cache" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ResolveComReferenceCache Remove="obj\Debug\netstandard2.0\Economics.csproj.ResolveComReference.cache" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <IntermediateAssembly Remove="obj\Debug\netstandard2.0\Economics.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_DebugSymbolsIntermediatePath Remove="obj\Debug\netstandard2.0\Economics.pdb" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_DeploymentManifestEntryPoint Remove="obj\Debug\netstandard2.0\Economics.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ApplicationManifest Remove="obj\Debug\netstandard2.0\Native.Economics.manifest" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <DeployManifest Remove="obj\Debug\netstandard2.0\Economics.application" />
+  </ItemGroup>
   
 </Project>
