--- a/Components/DFS/DFS.csproj
+++ b/Components/DFS/DFS.csproj
@@ -16,4 +16,32 @@
     <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
   </ItemGroup>
   
+  <ItemGroup>
+    <_UnmanagedRegistrationCache Remove="obj\DFS.csproj.UnmanagedRegistration.cache" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_ResolveComReferenceCache Remove="obj\Debug\netstandard2.0\DFS.csproj.ResolveComReference.cache" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <IntermediateAssembly Remove="obj\Debug\netstandard2.0\DFS.dll" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_DebugSymbolsIntermediatePath Remove="obj\Debug\netstandard2.0\DFS.pdb" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_DeploymentManifestEntryPoint Remove="obj\Debug\netstandard2.0\DFS.dll" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ApplicationManifest Remove="obj\Debug\netstandard2.0\Native.DFS.manifest" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <DeployManifest Remove="obj\Debug\netstandard2.0\DFS.application" />
+  </ItemGroup>
+  
 </Project>
