--- a/Components/P2P/P2P.csproj
+++ b/Components/P2P/P2P.csproj
@@ -11,29 +11,36 @@
 
   <ItemGroup>
     <_UnmanagedRegistrationCache Remove="obj\P2P.csproj.UnmanagedRegistration.cache" />
+    <_UnmanagedRegistrationCache Remove="obj\P2P.csproj.UnmanagedRegistration.cache" />
   </ItemGroup>
 
   <ItemGroup>
+    <_ResolveComReferenceCache Remove="obj\Debug\netstandard2.0\P2P.csproj.ResolveComReference.cache" />
     <_ResolveComReferenceCache Remove="obj\Debug\netstandard2.0\P2P.csproj.ResolveComReference.cache" />
   </ItemGroup>
 
   <ItemGroup>
     <IntermediateAssembly Remove="obj\Debug\netstandard2.0\P2P.dll" />
+    <IntermediateAssembly Remove="obj\Debug\netstandard2.0\P2P.dll" />
   </ItemGroup>
 
   <ItemGroup>
+    <_DebugSymbolsIntermediatePath Remove="obj\Debug\netstandard2.0\P2P.pdb" />
     <_DebugSymbolsIntermediatePath Remove="obj\Debug\netstandard2.0\P2P.pdb" />
   </ItemGroup>
 
   <ItemGroup>
     <_DeploymentManifestEntryPoint Remove="obj\Debug\netstandard2.0\P2P.dll" />
+    <_DeploymentManifestEntryPoint Remove="obj\Debug\netstandard2.0\P2P.dll" />
   </ItemGroup>
 
   <ItemGroup>
     <ApplicationManifest Remove="obj\Debug\netstandard2.0\Native.P2P.manifest" />
+    <ApplicationManifest Remove="obj\Debug\netstandard2.0\Native.P2P.manifest" />
   </ItemGroup>
 
   <ItemGroup>
+    <DeployManifest Remove="obj\Debug\netstandard2.0\P2P.application" />
     <DeployManifest Remove="obj\Debug\netstandard2.0\P2P.application" />
   </ItemGroup>
 
