--- a/Components/Rpc/Server/RpcServer.csproj
+++ b/Components/Rpc/Server/RpcServer.csproj
@@ -14,5 +14,33 @@
     <PackageReference Include="Grpc" Version="1.16.0" />
     <PackageReference Include="Grpc.Core" Version="1.16.0" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <_UnmanagedRegistrationCache Remove="obj\RpcServer.csproj.UnmanagedRegistration.cache" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_ResolveComReferenceCache Remove="obj\Debug\netcoreapp2.0\RpcServer.csproj.ResolveComReference.cache" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <IntermediateAssembly Remove="obj\Debug\netcoreapp2.0\RpcServer.dll" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_DebugSymbolsIntermediatePath Remove="obj\Debug\netcoreapp2.0\RpcServer.pdb" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <_DeploymentManifestEntryPoint Remove="obj\Debug\netcoreapp2.0\RpcServer.dll" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <ApplicationManifest Remove="obj\Debug\netcoreapp2.0\Native.RpcServer.manifest" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <DeployManifest Remove="obj\Debug\netcoreapp2.0\RpcServer.application" />
+  </ItemGroup>
 
 </Project>
