--- a/Wallet/Wallet.csproj
+++ b/Wallet/Wallet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,8 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Cryptography\Cryptography.csproj" />
-      <ProjectReference Include="..\Math\Math.csproj" />
+      <ProjectReference Include="..\Helpers\Cryptography\Cryptography.csproj" />
+      <ProjectReference Include="..\Helpers\Math\Math.csproj" />
     </ItemGroup>
-
+    
 </Project>
