allow resolving of settings from container and pass them to rpc

--- a/Node/Configs/components.json
+++ b/Node/Configs/components.json
@@ -21,7 +21,7 @@
       "type": "ADL.DFS.IpfsWrapper, DFS",
       "services": [
         {
-          "type": "ADL.DFS.IDFS, DFS"
+          "type": "ADL.DFS.IDfs, DFS"
         }
       ]
     },
