--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -37,4 +37,14 @@
     <ItemGroup>
       <DeployManifest Remove="obj\Debug\netcoreapp2.1\Cli.application" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Shell\Commands\Advanced" />
+      <Folder Include="Shell\Commands\Consensus" />
+      <Folder Include="Shell\Commands\DFS" />
+      <Folder Include="Shell\Commands\Gossip" />
+      <Folder Include="Shell\Commands\Node" />
+      <Folder Include="Shell\Commands\RCP" />
+      <Folder Include="Shell\Commands\Wallet" />
+    </ItemGroup>
 </Project>
