--- a/Cli/Cli.csproj
+++ b/Cli/Cli.csproj
@@ -41,7 +41,7 @@
     <ItemGroup>
       <Folder Include="Shell\Commands\Advanced" />
       <Folder Include="Shell\Commands\Consensus" />
-      <Folder Include="Shell\Commands\DFS" />
+      <Folder Include="Shell\Commands\Dfs" />
       <Folder Include="Shell\Commands\Gossip" />
       <Folder Include="Shell\Commands\Node" />
       <Folder Include="Shell\Commands\RCP" />
