--- a/Components/Consensus/ConsensusService.csproj
+++ b/Components/Consensus/ConsensusService.csproj
@@ -11,11 +11,11 @@
     </ItemGroup>
 
     <ItemGroup>
-      <_UnmanagedRegistrationCache Remove="obj\Consensus.csproj.UnmanagedRegistration.cache" />
+      <_UnmanagedRegistrationCache Remove="obj\ConsensusService.csproj.UnmanagedRegistration.cache" />
     </ItemGroup>
 
     <ItemGroup>
-      <_ResolveComReferenceCache Remove="obj\Debug\netstandard2.0\Consensus.csproj.ResolveComReference.cache" />
+      <_ResolveComReferenceCache Remove="obj\Debug\netstandard2.0\ConsensusService.csproj.ResolveComReference.cache" />
     </ItemGroup>
 
     <ItemGroup>
