--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Components\Dfs\DfsService.csproj" />
+      <ProjectReference Include="..\Node\Node.csproj" />
     </ItemGroup>
 
 </Project>
