--- a/Node/Configs/config.mainnet.json
+++ b/Node/Configs/config.mainnet.json
@@ -15,7 +15,9 @@
         "StorageType": "Ipfs"
       },
       "Dfs": {
-        "StorageType": "Ipfs"
+        "StorageType": "Ipfs",
+        "ConnectRetries": 10,
+        "IpfsVersionApi": "api/v0/"
       },
       "Gossip": {
         "instances": 5
