protobuf and redis first integration

--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Components\Dfs\DfsService.csproj" />
       <ProjectReference Include="..\Node\Node.csproj" />
+      <ProjectReference Include="..\Utilities\Utilities.csproj" />
     </ItemGroup>
 
 </Project>
