--- a/Components/Mempool/MempoolService.csproj
+++ b/Components/Mempool/MempoolService.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Akka" Version="1.3.10" />
     <PackageReference Include="Akka.Remote" Version="1.3.10" />
+    <PackageReference Include="Google.Protobuf" Version="3.6.1" />
   </ItemGroup>
 
   <ItemGroup>
